--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -63,10 +63,12 @@
         <form id="loginForm" method="post">
             {% csrf_token %}
             <br>
-            <input type="text" id="username" name="username" placeholder="Brukernavn" required oninvalid="this.setCustomValidity('Værsåsnill skriv inn brukernavnet')" oninput="this.setCustomValidity('')">
+            <label for="username" class="form-tag-username tag">Brukernavn</label>
+            <input type="text" id="username" name="username" required oninvalid="this.setCustomValidity('Værsåsnill skriv inn brukernavnet')" oninput="this.setCustomValidity('')">
             <br>
             <br>
-            <input type="password" id="password" name="password" placeholder="Passord" required oninvalid="this.setCustomValidity('Skriv inn passordet')" oninput="this.setCustomValidity('')">
+            <label for="password" class="form-tag-password tag">Passord</label>
+            <input type="password" id="password" name="password" required oninvalid="this.setCustomValidity('Skriv inn passordet')" oninput="this.setCustomValidity('')">
             <div id="signUpFormErrors">{{ form.username.errors }}</div>
             <br>
             <div id="signUpFormErrors">{{ form.password.errors }}</div>
@@ -75,27 +77,33 @@
                 <span onclick="loginBack()">Tilbake</span>
             </div>
         </form>
-        <form id="signUpForm" method="post">      
+        <form id="signUpForm" method="post" autocomplete="off">      
             {% csrf_token %}
             {{ form.non_field_errors }}
             {{form.errors}}
             <br>
-            <input type="text" id="username" name="username" placeholder="Brukernavn" required oninvalid="this.setCustomValidity('Værsåsnill velg en brukernavn')" oninput="this.setCustomValidity('')">
+            <label for="username" class="form-tag-username tag">Brukernavn</label>
+            <input type="text" id="username" name="username" required oninvalid="this.setCustomValidity('Værsåsnill velg en brukernavn')" oninput="this.setCustomValidity('')">
             <br>
             <br>
-            <input type="text" id="first_name" name="first_name" placeholder="Fornavn" required oninvalid="this.setCustomValidity('Fornavn kan ikke være tom')" oninput="this.setCustomValidity('')">
+            <label for="first_name" class="form-tag-first_name tag">Fornavn</label>
+            <input type="text" id="first_name" name="first_name" required oninvalid="this.setCustomValidity('Fornavn kan ikke være tom')" oninput="this.setCustomValidity('')">
             <br>
             <br>
-            <input type="text" id="last_name" name="last_name" placeholder="Etternavn" required oninvalid="this.setCustomValidity('Etternavn kan ikke være tom')" oninput="this.setCustomValidity('')">
+            <label for="last_name" class="form-tag-last_name tag">Etternavn</label>
+            <input type="text" id="last_name" name="last_name" required oninvalid="this.setCustomValidity('Etternavn kan ikke være tom')" oninput="this.setCustomValidity('')">
             <br>
             <br>
-            <input type="email" id="email" name="email" placeholder="Epost" required oninvalid="this.setCustomValidity('Skriv din epost her')" oninput="this.setCustomValidity('')">
+            <label for="email" class="form-tag-email tag">Epost</label>
+            <input type="email" id="email" name="email" required oninvalid="this.setCustomValidity('Skriv din epost her')" oninput="this.setCustomValidity('')">
             <br>
             <br>
-            <input type="password" id="password1" placeholder="Passord" name="password1" required oninvalid="this.setCustomValidity('Velg et passord')" oninput="this.setCustomValidity('')">
+            <label for="password1" class="form-tag-password1 tag">Passord</label>
+            <input type="password" autocomplete="new-password" id="password1" name="password1" required oninvalid="this.setCustomValidity('Velg et passord')" oninput="this.setCustomValidity('')">
             <br>
             <br>
-            <input type="password" id="password2" placeholder="Gjenta passord" name="password2" required oninvalid="this.setCustomValidity('Du må gjenta passordet')" oninput="this.setCustomValidity('')">
+            <label for="password2" class="form-tag-password2 tag">Gjenta passord</label>
+            <input type="password" id="password2" name="password2" required oninvalid="this.setCustomValidity('Du må gjenta passordet')" oninput="this.setCustomValidity('')">
             <div id="submit">
                 <button id="signUpFormButton" type="submit" name="signup" value="signup">Lag Bruker</button>
                 <span onclick="signUpBack()">Tilbake</span>
