--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -12,7 +12,7 @@ html, body {
   width: 100%;
   height: auto;
   padding: 15px;
-  padding-top: 40px;
+  padding-top: 0;
   text-align: center;
   position: relative;
   -webkit-transition: all ease-in .5s;
@@ -434,7 +434,7 @@ html, body {
 }
 
 .contact-us form .form-tag-navn {
-  font-size: 14px;
+  font-size: 15px;
   color: #3c54a0;
   background: white;
   width: -webkit-max-content;
@@ -443,11 +443,11 @@ html, body {
   padding: 0 2px;
   position: absolute;
   left: 20px;
-  top: 25px;
+  top: 24px;
 }
 
 .contact-us form .form-tag-email {
-  font-size: 14px;
+  font-size: 15px;
   color: #3c54a0;
   background: white;
   width: -webkit-max-content;
@@ -456,11 +456,11 @@ html, body {
   padding: 0 2px;
   position: absolute;
   left: 20px;
-  top: 90px;
+  top: 88px;
 }
 
 .contact-us form .form-tag-message {
-  font-size: 14px;
+  font-size: 15px;
   color: #3c54a0;
   background: white;
   width: -webkit-max-content;
@@ -481,13 +481,6 @@ html, body {
   height: 100px;
   outline: none;
   font-size: 15px;
-}
-
-.contact-us form input:-webkit-autofill,
-.contact-us form input:-webkit-autofill:hover,
-.contact-us form input:-webkit-autofill:focus,
-.contact-us form input:-webkit-autofill:active {
-  -webkit-box-shadow: 0 0 0 30px white inset !important;
 }
 
 .contact-us form input {
