--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -39,8 +39,8 @@
 }
 
 .cover-mobile .img {
-  -webkit-transform: translatey(180px);
-          transform: translatey(180px);
+  -webkit-transform: translateY(120px);
+          transform: translateY(120px);
   position: absolute;
   background: white;
   width: 100%;
@@ -48,14 +48,14 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-shadow: 0 1px 10px #3c54a0;
-          box-shadow: 0 1px 10px #3c54a0;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  -webkit-box-align: left;
+      -ms-flex-align: left;
+          align-items: left;
+  -webkit-box-shadow: 0px 5px 5px #3c54a0;
+          box-shadow: 0px 5px 5px #3c54a0;
 }
 
 .cover-mobile .img img {
@@ -64,9 +64,11 @@
 
 .cover-mobile .cover-text {
   width: 100%;
-  height: 100%;
-  -webkit-transform: translateY(120px) translateX(0);
-          transform: translateY(120px) translateX(0);
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  -webkit-transform: translateY(-180px) translateX(0);
+          transform: translateY(-180px) translateX(0);
   text-align: left;
   margin: 5px;
   margin-top: 0;
@@ -86,7 +88,7 @@
 .cover-mobile .cover-text h1 span {
   font-weight: 700;
   font-size: 30px;
-  color: #142c78;
+  color: #324a96;
 }
 
 .cover-mobile .cover-text p {
