--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -28,23 +28,23 @@
   align-items: center;
   background: white;
   .img{
-    transform: translatey(180px);
+    transform: translateY(120px);
     position: absolute;
     background: white;
     width: 100%;
     height: auto;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 1px 10px rgb(60, 84, 160);
+    justify-content: left;
+    align-items: left;
+    box-shadow: 0px 5px 5px rgb(60, 84, 160);
     img{
       max-width: 320px;
     }
   }
   .cover-text{
     width: 100%;
-    height: 100%;
-    transform: translateY(120px) translateX(0);
+    height: max-content;
+    transform: translateY(-180px) translateX(0);
     text-align: left;
     margin: 5px;
     margin-top: 0;
@@ -59,7 +59,7 @@
       span{
         font-weight: 700;
         font-size: 30px;
-        color: rgb(20, 44, 120);
+        color: rgb(50, 74, 150);
       }
     }
     p{
