--- a/static/scss/userprofile/login.scss
+++ b/static/scss/userprofile/login.scss
@@ -5,11 +5,33 @@
         width: auto;
         display: none;
         margin: 5px;
+        .form-tag-username{
+            font-size: 15px;
+            color: rgb(60, 84, 160);
+            background: white;
+            width: max-content;
+            padding: 0 2px;
+            position: absolute;
+            left: 25px;
+            top: 28px;
+        }
+        .form-tag-password{
+            font-size: 15px;
+            color: rgb(60, 84, 160);
+            background: white;
+            width: max-content;
+            padding: 0 2px;
+            position: absolute;
+            left: 25px;
+            top: 93px;
+        }
         input{
             width: 100%;
-            border: 1px solid rgb(120, 120, 120);
-            border-radius: 3px;
-            padding: 3px;
+            border: 2px solid rgb(60, 84, 160);
+            border-radius: 4px;
+            padding: 7px;
+            outline: none;
+            font-size: 15px;      
         }
         #submit{
             text-align: center;
@@ -26,18 +48,18 @@
             margin-right: 0;
         }
         #logInButton{
-            border-radius: 30px;
-            border: 2px solid transparent;
-            color: rgb(30, 30, 30);
+            border-radius: 4px;
             display: inline-block;
             text-decoration: none;
             width: 60%;
             font-size: 18px;
             padding: 5px;
             transition: all .5s ease-in-out;
-            background: rgb(72, 90, 185);
             color: white;
             outline: none;
+            background: linear-gradient(135deg,rgb(60, 84, 160), #7996f8);    
+            box-shadow: 1.5px 3px 2px rgb(60, 84, 160);
+            border: 2px solid transparent;      
         }
         span{
             border-radius: 30px;
